--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,11 @@
 steps:
+  - label: ":serverless:"
+    command: "npm install serverless -g"
+  - label: ":node:"
+    command: "npm install"
   - label: ":console:"
     command: "setup.sh"
     parallelism: 1
     agents:
       queue: "${BUILDKITE_AGENT_META_DATA_QUEUE:-default}"
+    
