--- a/serverless.yml
+++ b/serverless.yml
@@ -21,5 +21,6 @@ functions:
           method: 'GET'
           path: /${self:custom.apiVersion}/healthcheck
 custom:
-  linting: false
+  bundle:
+    linting: false
   apiVersion: v1
