--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
       name: "Deploy Auction API"
       if: type = push AND NOT branch = master
       env:
-        - SERVICE_PATH=""
+        - SERVICE_PATH="auction-api"
         - STAGE_NAME=sit
         - *SIT_ENV
 
@@ -45,6 +45,6 @@ jobs:
       name: "Deploy Auction API"
       if: type = push AND branch = master
       env:
-        - SERVICE_PATH=""
+        - SERVICE_PATH="auction-api"
         - STAGE_NAME=prod
         - *PRODUCTION_ENV
