fix lambda path

--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -15,7 +15,7 @@ provider:
 
 functions:
   healthcheck:
-    handler: src/utility/healthcheck.handler
+    handler: utility/healthcheck.handler
     events:
       - http:
           method: 'GET'
