update api version

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ environments:
     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_SIT}
     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_SIT}
 
-  - &PRODUCTION_ENV
-    - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_PRODUCTION}
-    - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_PRODUCTION}
+  - &PROD_ENV
+    - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_PROD}
+    - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_PROD}
 
 jobs:
   include:
@@ -47,4 +47,4 @@ jobs:
       env:
         - SERVICE_PATH="auction-api"
         - STAGE_NAME=prod
-        - *PRODUCTION_ENV
+        - *PROD_ENV
