--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -25,7 +25,7 @@ functions:
     event:
       - http:
           method: 'POST'
-          path: /${self:custom.apiVersion}/createAuction
+          path: /${self:custom.apiVersion}/auction
 custom:
   bundle:
     linting: false
