--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy_service_job: &DEPLOY_SERVICE_JOB
 
   script:
     - cd ${SERVICE_PATH}
-    - serverless deploy -s ${TRAVIS_BRANCH}
+    - serverless deploy -s ${STAGE_NAME}
     - cd -
 
 environments:
