--- a/auction-api/package.json
+++ b/auction-api/package.json
@@ -9,7 +9,14 @@
   "author": "Khiem Vo",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.918.0"
+    "@middy/core": "^2.2.0",
+    "@middy/http-error-handler": "^2.2.0",
+    "@middy/http-event-normalizer": "^2.2.0",
+    "@middy/http-json-body-parser": "^2.2.0",
+    "@middy/validator": "^2.2.0",
+    "aws-sdk": "^2.918.0",
+    "http-errors": "^1.8.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "serverless-bundle": "^4.3.1",
