--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -15,7 +15,7 @@ provider:
 
 functions:
   healthcheck:
-    handler: utility/healthcheck.handler
+    handler: auction/healthcheck.handler
     events:
       - http:
           method: 'GET'
@@ -26,7 +26,36 @@ functions:
       - http:
           method: 'POST'
           path: /${self:custom.apiVersion}/auction
+  getAuctions:
+    handler: auction/getAuctions.handler 
+    events:
+      - http:
+          method: GET
+          path: /${self:custom.apiVersion}/auctions
+          authorizer: ${self:custom.authorizer}
+  getAuction:
+    handler: auction/getAuction.handler 
+    events:
+      - http:
+          method: GET
+          path: /${self:custom.apiVersion}/auction/{id}
+          authorizer: ${self:custom.authorizer}
+  placeBid:
+    handler: auction/placeBid.handler 
+    events:
+      - http:
+          method: PATCH # don't use POST because it uses for creation. Patch is update a property of a auction
+          path: /${self:custom.apiVersion}/auction/{id}/bid
+          authorizer: ${self:custom.authorizer}
+  processAuctions:
+    handler: src/handlers/processAuctions.handler 
+    # events:
+    #   - schedule: rate(1 minute) # it similiars cron job
 custom:
+  authorizer: arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:auth-service-${self:provider.stage}-auth
+  AuctionsTable:
+    name: !Ref AuctionsTable
+    arn: !GetAtt AuctionsTable.Arn
   bundle:
     linting: false
   apiVersion: v1
