--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -12,6 +12,12 @@ provider:
   lambdaHashingVersion: 20201221
   region: ap-southeast-2 # default region
   stage: ${opt:stage, 'sit'} # environment state
+  iamRoleStatements:
+    - Effect: Allow
+      Action: 
+        dynamodb:PutItem
+      Resource:
+        arn:aws:dynamodb:#{AWS:Region}:#{AWS::AccountId}:table/AuctionsTable
 
 resources: 
   Resources: # Use cloudformation syntax start from here
