--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -17,7 +17,8 @@ provider:
       Action: 
         dynamodb:PutItem
       Resource:
-        arn:aws:dynamodb:#{AWS:Region}:#{AWS::AccountId}:table/AuctionsTable
+        arn:aws:dynamodb:ap-southeast-2:139754892886:table/AuctionsTable
+        #arn:aws:dynamodb:#{AWS:Region}:#{AWS::AccountId}:table/AuctionsTable
 
 resources: 
   Resources: # Use cloudformation syntax start from here
