--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -13,26 +13,11 @@ provider:
   region: ap-southeast-2 # default region
   stage: ${opt:stage, 'sit'} # environment state
   iamRoleStatements:
-    - Effect: Allow
-      Action: 
-        dynamodb:PutItem
-      Resource:
-        #arn:aws:dynamodb:ap-southeast-2:139754892886:table/AuctionsTable
-        arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionsTable
+    - ${file(iam/AuctionsTableIAM.yml):AuctionsTableIAM}
 
 resources: 
   Resources: # Use cloudformation syntax start from here
-    AuctionsTable: # Logical ID for the resource
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: AuctionsTable
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions: 
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id # partition key
-            KeyType: HASH
+    AuctionsTable: ${file(resources/AuctionsTable.yml):AuctionsTable}
 
 functions: # represent lambda fuction
   healthcheck:
@@ -72,6 +57,7 @@ functions: # represent lambda fuction
   #  handler: auction/processAuctions.handler 
     # events:
     #   - schedule: rate(1 minute) # it similiars cron job
+
 custom: # define custom variable
   authorizer: arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:auth-service-${self:provider.stage}-auth
   AuctionsTable:
