--- a/auction-api/iam/AuctionsTableIAM.yml
+++ b/auction-api/iam/AuctionsTableIAM.yml
@@ -3,4 +3,5 @@ AuctionsTableIAM:
   Action: 
     - dynamodb:PutItem
   Resource:
-    - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionsTable
+    - ${self:custom.AuctionsTable.arn}
+    #- arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionsTable
