--- a/auction-api/resources/AuctionsTable.yml
+++ b/auction-api/resources/AuctionsTable.yml
@@ -1,7 +1,7 @@
 AuctionsTable: # Logical ID for the resource
   Type: AWS::DynamoDB::Table
   Properties:
-    TableName: AuctionsTable
+    TableName: AuctionsTable-{self:provider.stage}
     BillingMode: PAY_PER_REQUEST
     AttributeDefinitions: 
       - AttributeName: id
