--- a/auction-api/iam/AuctionsTableIAM.yml
+++ b/auction-api/iam/AuctionsTableIAM.yml
@@ -2,6 +2,8 @@ AuctionsTableIAM:
   Effect: Allow
   Action: 
     - dynamodb:PutItem
+    - dynamodb:Scan
+    - dynamodb:GetItem
   Resource:
     - ${self:custom.AuctionsTable.arn}
     #- arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionsTable
