--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -9,6 +9,7 @@ plugins: #
 provider:
   name: aws # cloud provider
   runtime: nodejs14.x # runtime programming language
+  memorySize: 256 #lambda memory size
   lambdaHashingVersion: 20201221
   region: ap-southeast-2 # default region
   stage: ${opt:stage, 'sit'} # environment state
