--- a/auction-api/iam/AuctionsTableIAM.yml
+++ b/auction-api/iam/AuctionsTableIAM.yml
@@ -2,10 +2,13 @@ AuctionsTableIAM:
   Effect: Allow
   Action: 
     - dynamodb:PutItem
-    - dynamodb:Query
     - dynamodb:Scan
     - dynamodb:GetItem
     - dynamodb:UpdateItem
+    - dynamodb:Query
   Resource:
     - ${self:custom.AuctionsTable.arn}
-    #- arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionsTable
+    #GlobalSecondaryIndex is virtual table therefore it has its own arn
+    - !Join ['/', '${self:custom.AuctionsTable.arn}', 'index', 'statusAndEndDate'] # get arn for GlobalSecondaryIndex
+    #alternatively use ${self:custom.AuctionsTable.arn}/index/statusAndEndDate
+    #- arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionsTable 
