--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -15,8 +15,10 @@ provider:
   stage: ${opt:stage, 'sit'} # environment state
   environment:
     AUCTIONS_TABLE_NAME: ${self:custom.AuctionsTable.name}
+    MAIL_QUEUE_URL: ${self:custom.MailQueue.url}
   iamRoleStatements:
     - ${file(iam/AuctionsTableIAM.yml):AuctionsTableIAM}
+    - ${file(iam/MailQueueIAM.yml):MailQueueIAM}
 
 resources: 
   Resources: # Use cloudformation syntax start from here
@@ -42,7 +44,7 @@ functions: # represent lambda fuction
       - http:
           method: GET
           path: /${self:custom.apiVersion}/auctions
-          #authorizer: ${self:custom.authorizer}
+          authorizer: ${self:custom.authorizer}
   getAuction:
     handler: auction/getAuction.handler 
     events:
@@ -67,6 +69,9 @@ custom: # define custom variable
   AuctionsTable:
     name: !Ref AuctionsTable # AuctionsTable (logical name) is referenced AuctionsTable: ${file(resources/AuctionsTable.yml):AuctionsTable}
     arn: !GetAtt AuctionsTable.Arn
+  MailQueue:
+    arn: ${cf:kvo-notification-service-${self:provider.stage}.MailQueueArn}
+    url: ${cf:kvo-notification-service-${self:provider.stage}.MailQueueUrl}
   bundle:
     linting: false # asking serverless-bundle do not perform linting check. E.g. missing comma, semi-colon
   apiVersion: v1
