--- a/auction-api/package.json
+++ b/auction-api/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@middy/core": "^2.2.0",
+    "@middy/http-cors": "^2.4.1",
     "@middy/http-error-handler": "^2.2.0",
     "@middy/http-event-normalizer": "^2.2.0",
     "@middy/http-json-body-parser": "^2.2.0",
