--- a/auction-api/serverless.yml
+++ b/auction-api/serverless.yml
@@ -16,13 +16,17 @@ provider:
   environment:
     AUCTIONS_TABLE_NAME: ${self:custom.AuctionsTable.name}
     MAIL_QUEUE_URL: ${self:custom.MailQueue.url}
+    AUCTIONS_BUCKET_NAME: ${self:custom.AuctionsBucket.name}
   iamRoleStatements:
     - ${file(iam/AuctionsTableIAM.yml):AuctionsTableIAM}
     - ${file(iam/MailQueueIAM.yml):MailQueueIAM}
+    - ${file(iam/AuctionsBucketIAM.yml):AuctionsBucketIAM}
 
 resources: 
   Resources: # Use cloudformation syntax start from here
     AuctionsTable: ${file(resources/AuctionsTable.yml):AuctionsTable}
+    AuctionsBucket: ${file(resources/AuctionsBucket.yml):AuctionsBucket}
+    AuctionsBucketPolicy: ${file(resources/AuctionsBucket.yml):AuctionsBucketPolicy}
 
 functions: # represent lambda fuction
   healthcheck:
@@ -37,6 +41,7 @@ functions: # represent lambda fuction
       - http:
           method: 'POST' # create operation
           path: /${self:custom.apiVersion}/auction
+          cors: true
           authorizer: ${self:custom.authorizer}
   getAuctions:
     handler: auction/getAuctions.handler 
@@ -44,6 +49,7 @@ functions: # represent lambda fuction
       - http:
           method: GET
           path: /${self:custom.apiVersion}/auctions
+          cors: true
           authorizer: ${self:custom.authorizer}
   getAuction:
     handler: auction/getAuction.handler 
@@ -51,6 +57,7 @@ functions: # represent lambda fuction
       - http:
           method: GET
           path: /${self:custom.apiVersion}/auction/{id}
+          cors: true
           authorizer: ${self:custom.authorizer}
   placeBid:
     handler: auction/placeBid.handler 
@@ -58,6 +65,15 @@ functions: # represent lambda fuction
       - http:
           method: PATCH # don't use POST because it uses for creation. Patch is update a property of a auction
           path: /${self:custom.apiVersion}/auction/{id}/bid
+          cors: true
+          authorizer: ${self:custom.authorizer}
+  uploadAuctionPicture:
+    handler: auction/uploadAuctionPicture.handler
+    events:
+      - http:
+          method: PATCH
+          path: /${self:custom.apiVersion}/auction/{id}/picture
+          cors: true
           authorizer: ${self:custom.authorizer}
   processAuctions:
     handler: auction/processAuctions.handler 
@@ -72,6 +88,8 @@ custom: # define custom variable
   MailQueue:
     arn: ${cf:kvo-notification-service-${self:provider.stage}.MailQueueArn}
     url: ${cf:kvo-notification-service-${self:provider.stage}.MailQueueUrl}
+  AuctionsBucket:
+    name: kvo-auctions-bucket-${self:provider.stage}
   bundle:
     linting: false # asking serverless-bundle do not perform linting check. E.g. missing comma, semi-colon
   apiVersion: v1
